Name:           starrover2
Version:        0.0.1
Cabal-Version:  >= 1.6
License:        OtherLicense
License-File:   LICENSE
Author:         Antti Salonen<ajsalonen at gmail dot com>
Maintainer:     Antti Salonen<ajsalonen at gmail dot com>
Copyright:      Antti Salonen 2009
Stability:      Unstable
Homepage:       http://github.com/anttisalonen/starrover2
Category:       Games
Synopsis:       Space simulation game
Description:    Space simulation game.
Build-type:     Simple

source-repository head
  type:      git
  location:  git://github.com/anttisalonen/starrover2.git

Executable GraphicsTest
  Build-Depends:   base > 3 && < 5, haskell98,
                   OpenGL>=2.1.0.0,
                   mtl>=1.1.0.0,
                   SDL>=0.5.5
  Main-is:         GraphicsTest.hs
  Hs-Source-Dirs:  src
  Ghc-options:     -Wall

